--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
+
+html,body {
+    display: grid;
+    height: 100%;
+    place-content: center;
+}
+
+.wrapper {
+    max-width: 400px;
+    background-color: #BAD7F2;
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 15px 20px;
 }
