--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 * {
     margin: 0;
@@ -14,9 +14,65 @@ html,body {
 }
 
 .wrapper {
-    max-width: 400px;
+    /* max-width: 400px; */
+    width: 500px;
     background-color: #BAD7F2;
     border-radius: 5px;
     padding: 30px;
     box-shadow: 0px 15px 20px;
+}
+
+.wrapper .title-text {
+    display: flex;
+    width: 200%;
+}
+
+.wrapper .title-text .title {
+    width: 50%;
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.wrapper .form-container {
+    width: 100%;
+}
+
+.form-container .form-inner form {
+
+}
+
+.form-inner form .field {
+    height: 50px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.form-inner form .field input {
+    width: 100%;
+    height: 100%;
+    padding-left: 10px;
+    outline: none;
+    font-size: 15px;
+    border-radius: 5px;
+    border: 1px solid white;
+    border-bottom-width: 2px;
+}
+
+.form-inner .forgot-pass a {
+    text-decoration: none;
+    color: black;
+}
+
+.form-inner .forgot-pass {
+    margin-top: 10px;
+}
+
+.form-inner .signup-link a {
+    text-decoration: none;
+    color: white;
+}
+
+.form-inner .signup-link {
+    margin-top: 10px;
 }
